# SWEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: Build.yml
cmake/: Findglfw.cmake  windows.cmake
includes/: Concept.hpp  SWEngine.hpp
includes/components/: Script.hpp  Sprite.hpp  SpriteAnimator.hpp  Transform.hpp
includes/components/base/: Component.hpp
includes/core/: Core.hpp
includes/core/monitor/: Monitor.hpp
includes/core/window/: Window.hpp
includes/gameobject/: GameObject.hpp  GameObject.inl  IGameObject.hpp
includes/managers/: ScriptManager.hpp  SpriteAnimatorManager.hpp  SpriteManager.hpp  TransformManager.hpp
includes/managers/base/: AManager.hpp  AManager.inl  IManager.hpp
includes/resources/: ResourceMap.hpp  ResourceMap.inl  ResourcesManager.hpp  Texture.hpp
includes/scene/: Scene.hpp  Scene.inl
includes/scene/sceneManager/: SceneManager.hpp
includes/utils/: Chrono.hpp  Chrono.inl  Chronos.hpp  Chronos.inl  Color.hpp  Color.inl  Rect.hpp  Rect.inl  Shader.hpp  ShaderFile.hpp  Singleton.hpp  Singleton.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vertex.hpp  Vertex.inl  VertexArray.hpp
includes/utils/exception/: Error.hpp  Error.inl
sources/: glad.c  json.cpp
sources/components/: Script.cpp  Sprite.cpp  SpriteAnimator.cpp
sources/components/base/: Component.cpp
sources/components/transform/: Position.cpp  Rotation.cpp  Scale.cpp  Transform.cpp
sources/core/: Core.cpp
sources/core/monitor/: Monitor.cpp
sources/core/window/: CallBack.cpp  Flag.cpp  Window.cpp
sources/gameobject/: GameObject.cpp
sources/managers/: ScriptManager.cpp  SpriteManager.cpp  SpriteManagerAnimator.cpp
sources/resources/: ResourcesManager.cpp  Texture.cpp
sources/scene/: Scene.cpp
sources/scene/sceneManager/: SceneManager.cpp
sources/utils/: Color.cpp  Shader.cpp  ShaderFile.cpp  Singleton.cpp  VertexArray.cpp
